# Django-pttBeauty-Restful-Render

./: app.py  crawler.py  dbModel.py  pyproject.toml  render.yaml  requirements.txt
ptt_beauty_images/: settings.py
