[tool.poetry]
name = "ptt_beauty_images"
version = "0.1.0"
description = ""
authors = ["Marek Kaput <marek.kaput@swmansion.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.0.8"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"
whitenoise = {extras = ["brotli"], version = "^5.1.0"}
gunicorn = "^20.0.4"
djangorestframework = "^3.13.1"
[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
