[tool.poetry]
name = "ptbeauty-restful"
version = "0.1.0"
description = ""
authors = ["pyfbsdk59 <pyfbsdk59@gmail.com>"]
readme = "README.md"
packages = [{include = "ptbeauty_restful"}]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.8"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"
whitenoise = "^5.1.0"
gunicorn = "^20.0.4"
djangorestframework = "^3.13.1"
pytest = "^5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
